--- a/index.html
+++ b/index.html
@@ -71,7 +71,23 @@
 
 <body>
 
-
+	<div id="container"></div>
+	<style>
+        #container {
+            width: 100vw;
+            height: 100vh;
+            position: relative;
+            background-color: #f0f0f0;
+        }
+        .dot {
+            width: 10px;
+            height: 10px;
+            background-color: red;
+            border-radius: 50%;
+            position: absolute;
+        }
+    </style>
+	
 	<!-- 不要 -->
 	<!-- <div id="info">
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> ar - hit test<br/>(Chrome Android 81+)
